--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "mettu",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "python src/main.py && vite",
-    "build": "python src/main.py && vite build"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "python src/main.py && vite build"
+},
   "keywords": [],
   "author": "Andey Hemanth",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
     "glob": "^11.0.3",
