--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mettu",
-  "version": "0.4.0",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build"
-},
+  "version": "0.5.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
   "keywords": [],
   "author": "Andey Hemanth",
   "license": "ISC",
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
+    "dotenv": "^17.2.1",
     "glob": "^11.0.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
