--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "daisyui": "^5.0.50",
     "dotenv": "^17.2.1",
     "glob": "^11.0.3",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.6"
