--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
     "dotenv": "^17.2.1",
+    "fast-glob": "^3.3.3",
     "glob": "^11.0.3",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-toc-done-right": "^4.2.0",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.3",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.6"
   }
