feat: image preprocessing now works feat: make pretty urls fix: fix the templates fix: script uses preprocessed images during build.

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,6 @@ author: "you"
 base_url: "you.com"
 navigation:
   - name: "Home"
-    url: "/index.html"
+    url: "/"
   - name: "Blog"
-    url: "/blog.html"
+    url: "/blog/"
